- improved performance by deleting visible and smellable objs with ".length=0". - added ObjectType for object identification instead of string compare - floored all action amounts - fixed antControllerSimple.js to bring home food - removed show smellableObjects (now are all only relative to ant) - moved "run" button outside to be used in every mode

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ div#all{
 div#terrariumContainer{
 	margin: auto;
     width:600px;
-	height:350px;
+	height:380px;
 	float:left;
 }
 div#graphs{
